force-app/main/default/objects/Recurring_Donation__c/Recurring_Donation__c.object-meta.xml
<CustomObject>
    <label>Recurring Donation</label>
    <nameField>
        <displayFormat>RD{yymmdd}{0000}</displayFormat>
        <label>RD No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>