force-app/main/default/objects/Recurring_Donation__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Donor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>