force-app/main/default/objects/Recurring_Donation__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi monthly</fullName>
                <isActive>false</isActive>
                <label>Bi monthly</label>
            </value>
            <value>
                <fullName>Bi weekly</fullName>
                <isActive>false</isActive>
                <label>Bi weekly</label>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
                <isActive>false</isActive>
                <label>Half Yearly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
                <isActive>false</isActive>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
                <isActive>false</isActive>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>