force-app/main/default/objects/Recurring_Donation__c/fields/GIRO_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>GIRO_Declined_Date__c</fullName>
    <label>GIRO Declined Date</label>
    <type>Date</type>
</CustomField>