force-app/main/default/objects/Recurring_Donation__c/fields/Next_Deduction_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Deduction_Date__c</fullName>
    <label>Next Deduction Date</label>
    <type>Date</type>
</CustomField>