force-app/main/default/objects/Recurring_Donation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>