force-app/main/default/objects/Recurring_Donation__c/fields/Tax_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deductible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Deductible</label>
    <type>Checkbox</type>
</CustomField>