force-app/main/default/objects/Recurring_Donation__c/fields/Tax_Recipient_Individual__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Recipient Individual</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recurring Donations (Tax Recipient Individual)</relationshipLabel>
    <relationshipName>Recurring_Donations1</relationshipName>
    <type>Lookup</type>
</CustomField>