force-app/main/default/objects/Recurring_Donation__c/fields/Tax_Recipient_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Recipient Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Donations (Tax Recipient Organisation)</relationshipLabel>
    <relationshipName>Recurring_Donations1</relationshipName>
    <type>Lookup</type>
</CustomField>