force-app/main/default/objects/Recurring_Donation__c/fields/Token_ID__c.field-meta.xml
<CustomField>
    <fullName>Token_ID__c</fullName>
    <inlineHelpText>Used for authorization with Payment Gateway, for Credit Card payment type</inlineHelpText>
    <label>Token ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>