force-app/main/default/objects/Recurring_Donation__c/fields/Total_Donation_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_to_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Donation to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>