force-app/main/default/objects/Recurring_Donation__c/validationRules/Donor_Name_must_belong_to_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Donor_Name_must_belong_to_Account</fullName>
    <active>true</active>
    <description>Donor Name must belong to Account</description>
    <errorConditionFormula>Donor_Name__r.AccountId !=  Account__r.Id</errorConditionFormula>
    <errorDisplayField>Donor_Name__c</errorDisplayField>
    <errorMessage>Donor Name doesn&apos;t belong to the Account</errorMessage>
</ValidationRule>