force-app/main/default/objects/Recurring_Donation__c/validationRules/Start_Date_before_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_before_Today</fullName>
    <active>false</active>
    <description>Start Date Can&apos;t be before TodaY</description>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date can not be before today</errorMessage>
</ValidationRule>