force-app/main/default/objects/Recurring_Donation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donor_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Frequency__c</columns>
    <columns>Amount__c</columns>
    <columns>RD_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Next_Deduction_Date__c</columns>
    <columns>Total_Donation_to_Date__c</columns>
    <columns>Tax_Deductible__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>